# Life-Memorizer-With-Gemini-Embedding-2-And-Qdrant-Edge

./: .env.example  .gitignore  ARCHITECTURE-DOCUMENTATION.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md  Feature_request.md
.gitlab/merge_request_templates/: Default.md
life_memorizer/: __init__.py  cli.py  config.py  embeddings.py  ingest.py  media.py  mock_data.py  models.py  rag.py  recall.py  store.py
tests/: conftest.py  test_embeddings.py  test_rag.py  test_step5.py  test_store_and_recall.py
