[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-memorizer"
version = "0.1.0"
description = "Offline, privacy-first multi-modal cognitive assistant using Gemini 2.0 embeddings and Qdrant Edge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Satyam Sahu" }]
keywords = ["qdrant", "gemini", "embeddings", "edge", "multimodal", "rag", "vector-database"]
dependencies = [
    "qdrant-edge-py>=0.7.2",
    "google-genai>=0.3.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
media = [
    "opencv-python-headless>=4.9",
    "imageio-ffmpeg>=0.4.9",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
life-memorizer = "life_memorizer.cli:app"

[tool.setuptools.packages.find]
include = ["life_memorizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
